--- a/src/profiles/templates/base.html
+++ b/src/profiles/templates/base.html
@@ -53,7 +53,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="{% static 'javascript/bootstrap.min.js' %}"></script>
@@ -62,11 +62,5 @@
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     {% block script %}
     {% endblock %}
-    <script>
-        $(document).ready(function(){
-            {% block jquery %}
-            {% endblock %}
-        });
-    </script>
   </body>
 </html>
