--- a/src/checkout/templates/checkout.html
+++ b/src/checkout/templates/checkout.html
@@ -3,6 +3,7 @@
 {% block script %}
     <script type="text/javascript">
         // Create a Stripe client
+        // TODO: Fix warnings "Unresolved function or method .... Possibly using TypeScript stubs"
         var stripe = Stripe('{{ publish_key }}');
 
         // Custom styling can be passed to options when creating an Element.
