Move base.html to the common _layouts directory

--- a/src/contact/templates/contact.html
+++ b/src/contact/templates/contact.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends '_layouts/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class='row'>
