Move navbar.html to common _layouts directory

--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -36,7 +36,7 @@
   </head>
 
   <body>
-    {% include 'navbar.html' %}
+    {% include '_layouts/navbar.html' %}
 
     <div class="container theme-showcase" role="main">
         {% block jumbotron %}
