--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -9,7 +9,7 @@
     </style>
 {% endblock %}
 
-{% block jumbotron %}
+{% block headline %}
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <h1>Theme example</h1>
