--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -11,22 +11,16 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Theme Template for Bootstrap</title>
+    <title>tryTen</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
     <!-- Bootstrap theme -->
     <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/theme.css' %}" rel="stylesheet">
     <link rel='stylesheet' href='{% static 'css/main.css' %}'/>
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -36,11 +30,10 @@
   </head>
 
   <body>
-    {% include '_layouts/navbar.html' %}
+    <header>{% include '_layouts/navbar.html' %}</header>
 
     <div class="container theme-showcase" role="main">
-        {% block jumbotron %}
-        {% endblock %}
+        {% block headline %}{% endblock %}
 
         {% block content %}
         {% endblock %}
@@ -57,9 +50,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/docs.min.js' %}"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     {% block script %}
     {% endblock %}
   </body>
