--- a/src/templates/_layouts/navbar.html
+++ b/src/templates/_layouts/navbar.html
@@ -8,16 +8,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bootstrap theme</a>
+      <a class="navbar-brand" href="{% url 'home' %}">tryTen</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         {% url 'home' as home %}
         {% url 'about' as about %}
         {% url 'contact' as contact %}
+        {% url 'checkout' as checkout %}
         <li {% if request.path == home %} class="active" {% endif %}><a href="{% url 'home' %}">Home</a></li>
         <li {% if request.path == about %} class="active" {% endif %}><a href="{% url 'about' %}">About</a></li>
         <li {% if request.path == contact %} class="active" {% endif %}><a href="{% url 'contact' %}">Contact</a></li>
+{#          TODO: @login_required for checkout#}
+        <li {% if request.path == checkout %} class="active" {% endif %}><a href="{% url 'checkout' %}">Checkout</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
           <ul class="dropdown-menu">
