Make AboutView as a Class-based view

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,6 +1,10 @@
 {% extends '_layouts/base.html' %}
 
-{% block content %}
+{% block headline %}
     <h1>hello about</h1>
+{% endblock %}
+
+{% block content %}
+    about content
 {% endblock %}
 
