Make Profile template crispy-generated

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/base.html' %}
 
 {% block headline %}
-    <h1>hello about</h1>
+    <h1>About</h1>
 {% endblock %}
 
 {% block content %}
