--- a/src/templates/_layouts/navbar.html
+++ b/src/templates/_layouts/navbar.html
@@ -15,11 +15,13 @@
         {% url 'home' as home %}
         {% url 'about' as about %}
         {% url 'contact' as contact %}
+        {% url 'profile' as profile %}
         {% url 'checkout' as checkout %}
         <li {% if request.path == home %} class="active" {% endif %}><a href="{% url 'home' %}">Home</a></li>
         <li {% if request.path == about %} class="active" {% endif %}><a href="{% url 'about' %}">About</a></li>
         <li {% if request.path == contact %} class="active" {% endif %}><a href="{% url 'contact' %}">Contact</a></li>
-{#          TODO: @login_required for checkout#}
+{#          TODO: @login_required for checkout & profile#}
+        <li {% if request.path == profile %} class="active" {% endif %}><a href="{% url 'profile' %}">Profile</a></li>
         <li {% if request.path == checkout %} class="active" {% endif %}><a href="{% url 'checkout' %}">Checkout</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
