--- a/src/contact/templates/contact/contact.html
+++ b/src/contact/templates/contact/contact.html
@@ -4,16 +4,11 @@
 {% block content %}
     <div class='row'>
         <div class='col-sm-6 col-sm-offset-3'>
-            <h1>{{ headline }}</h1>
+            <h1>Contact</h1>
             {% if confirm_message %}
                 <p>{{ confirm_message }}</p>
             {% endif %}
-            {% if form %}
-            <form method='POST' action=''> {% csrf_token %}
-                {{ form|crispy }}
-                <button class="btn btn-success">Submit</button>
-            </form>
-            {% endif %}
+            {% crispy form %}
         </div>
     </div>
 {% endblock %}
