--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -35,6 +35,14 @@
     <div class="container theme-showcase" role="main">
         {% block headline %}{% endblock %}
 
+        {% if messages %}
+        <ul class="list-unstyled messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+
         {% block content %}
         {% endblock %}
 
