--- a/src/checkout/templates/checkout/checkout.html
+++ b/src/checkout/templates/checkout/checkout.html
@@ -96,7 +96,7 @@
                 <div id="card-errors" role="alert"></div>
             </div>
 
-            <button class="btn btn-success">Submit Payment</button>
+            <button class="btn btn-default">Submit Payment</button>
         </form>
     </div>
     </div>
