--- a/src/templates/_layouts/navbar.html
+++ b/src/templates/_layouts/navbar.html
@@ -26,11 +26,19 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
           <ul class="dropdown-menu">
-              {% if not request.user.is_authenticated %}
-                <li><a href="{% url 'account_login' %}">Login</a></li>
-                <li><a href="{% url 'account_signup' %}">Signup</a></li>
+              {% if request.user.is_authenticated %}
+                <li>
+                    <a href="{% url 'account_logout' %}">
+                        <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;Logout
+                    </a>
+                </li>
               {% else %}
-                <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                <li>
+                    <a href="{% url 'account_login' %}">
+                       <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;Login
+                    </a>
+                </li>
+                <li><a href="{% url 'account_signup' %}">Signup</a></li>
               {% endif %}
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Nav header</li>
