--- a/src/profiles/templates/profiles/profile_detail.html
+++ b/src/profiles/templates/profiles/profile_detail.html
@@ -1,9 +1,9 @@
 {% extends "_layouts/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block headline %}
-    <h1>Profile</h1>
-{% endblock %}
+{% block title %}Profile{% endblock %}
+
+{% block headline %}<h2>Profile</h2>{% endblock %}
 
 {% block content %}
     <div class="row">
