--- a/src/checkout/templates/checkout/checkout.html
+++ b/src/checkout/templates/checkout/checkout.html
@@ -78,26 +78,27 @@
     </script>
 {% endblock %}
 
+{% block title %}Checkout{% endblock %}
+
+{% block headline %}<h2>Checkout</h2>{% endblock %}
+
 {% block content %}
     <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
-        <form class="form" action="" method="POST" id="payment-form">
-            {% csrf_token %}
+        <div class="col-sm-6 col-sm-offset-3">
+            <form class="form" action="" method="POST" id="payment-form">{% csrf_token %}
+                <div class="form-row">
+                    <label for="card-element">
+                      Credit or debit card
+                    </label>
+                    <div id="card-element">
+                      <!-- a Stripe Element will be inserted here. -->
+                    </div>
 
-            <div class="form-row">
-                <label for="card-element">
-                  Credit or debit card
-                </label>
-                <div id="card-element">
-                  <!-- a Stripe Element will be inserted here. -->
+                    <!-- Used to display form errors -->
+                    <div id="card-errors" role="alert"></div>
                 </div>
-
-                <!-- Used to display form errors -->
-                <div id="card-errors" role="alert"></div>
-            </div>
-
-            <button class="btn btn-default">Submit Payment</button>
-        </form>
-    </div>
+                <button class="btn btn-default">Submit Payment</button>
+            </form>
+        </div>
     </div>
 {% endblock %}
