--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>tryTen</title>
+    <title>{% block title %}{% endblock %} :: tryTen</title>
 
     {% load staticfiles %}
     <!-- Bootstrap core CSS -->
