--- a/src/templates/_layouts/navbar.html
+++ b/src/templates/_layouts/navbar.html
@@ -20,13 +20,14 @@
         <li {% if request.path == home %} class="active" {% endif %}><a href="{% url 'home' %}">Home</a></li>
         <li {% if request.path == about %} class="active" {% endif %}><a href="{% url 'about' %}">About</a></li>
         <li {% if request.path == contact %} class="active" {% endif %}><a href="{% url 'contact' %}">Contact</a></li>
-{#          TODO: @login_required for checkout & profile#}
-        <li {% if request.path == profile %} class="active" {% endif %}><a href="{% url 'profile' %}">Profile</a></li>
-        <li {% if request.path == checkout %} class="active" {% endif %}><a href="{% url 'checkout' %}">Checkout</a></li>
+        {% if request.user.is_authenticated %}
+            <li {% if request.path == checkout %} class="active" {% endif %}><a href="{% url 'checkout' %}">Checkout</a></li>
+        {% endif %}
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
           <ul class="dropdown-menu">
               {% if request.user.is_authenticated %}
+                <li {% if request.path == profile %} class="active" {% endif %}><a href="{% url 'profile' %}">Profile</a></li>
                 <li>
                     <a href="{% url 'account_logout' %}">
                         <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;Logout
