--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,8 +1,8 @@
 {% extends '_layouts/base.html' %}
 
-{% block headline %}
-    <h1>About</h1>
-{% endblock %}
+{% block title %}About{% endblock %}
+
+{% block headline %}<h2>About</h2>{% endblock %}
 
 {% block content %}
     about content
