--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -9,10 +9,12 @@
     </style>
 {% endblock %}
 
+{% block title %}Home{% endblock %}
+
 {% block headline %}
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h1>Theme example</h1>
+        <h2>Theme example</h2>
         <p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
     </div>
 {% endblock %}
