--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
@@ -46,6 +46,10 @@
 
         {% block content %}
         {% endblock %}
+
+        <div id="footer">
+            <p>Все права принадлежат разработчикам сайта.</p>
+        </div>
 
         {% block styles %}
         {% endblock %}
