--- a/src/goods/templates/goods/good_list.html
+++ b/src/goods/templates/goods/good_list.html
@@ -8,7 +8,7 @@
         </tr>
         {% for good in good_list %}
             <tr>
-                <td><a href="{% url 'goods:good' good.id %}?page={{ page_obj.number }}">{{ good.name }}</a></td>
+                <td><a href="{% url 'goods:detail' good.id %}?page={{ page_obj.number }}">{{ good.name }}</a></td>
                 <td class="centered">{{ good.get_is_stock }}</td>
             </tr>
         {% endfor %}
