--- a/src/templates/_layouts/navbar.html
+++ b/src/templates/_layouts/navbar.html
@@ -25,6 +25,14 @@
             <li {% if request.path == contact %} class="active" {% endif %}><a href="{% url 'contact' %}">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
+            {% url 'goods:list' as home %}
+            {% if request.user.is_authenticated and category%}
+                <li class="active">
+                    <a href="{% url 'goods:create' cat_id=category.id %}?page={{ page_obj.number }}">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;Add Good
+                    </a>
+                </li>
+            {% endif %}
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
                 <ul class="dropdown-menu">
