--- a/static/static/css/main.css
+++ b/static/static/css/main.css
@@ -29,15 +29,7 @@
 #main h2{
     margin:0 0 10px 0;
 }
-#main table{
-    width:100%;
-    border-collapse:collapse;
-}
-#main table td, #main table th{
-    border:1px #666666 solid;
-    padding: 5px;
-}
-#main table td.centered{
+#main table td.centered, th.centered{
     text-align: center;
 }
 #main p.category{
