--- a/src/goods/templates/goods/good_confirm_delete.html
+++ b/src/goods/templates/goods/good_confirm_delete.html
@@ -1,8 +1,8 @@
 {% extends 'goods/base_goods.html' %}
 
-{% block title %}Deleting {{ object }} :: {{ block.super }}{% endblock %}
+{% block title %}Deleting good {{ object }} :: {{ block.super }}{% endblock %}
 
-{% block good_headline %}Deleting {{ object }} :: {% endblock %}
+{% block good_headline %}Deleting good <a href="{% url 'goods:detail' object.id %}">{{ object.name }}</a> :: {% endblock %}
 
 {% block content %}
     <div class="row">
