--- a/src/goods/templates/goods/good_form.html
+++ b/src/goods/templates/goods/good_form.html
@@ -1,16 +1,16 @@
 {% extends 'goods/base_goods.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}{{ headline }} :: {{ block.super }}{% endblock %}
+{% block title %}{{ headline }}{% if object %}{{ object.name }} :: {% endif %}{{ block.super }}{% endblock %}
 
-{% block good_headline %}{{ headline }}{% endblock %}
+{% block good_headline %}{{ headline }}{% if object %}<a href="{% url 'goods:detail' object.id %}">{{ object.name }}</a> :: {% endif %}{% endblock %}
 
 {% block main %}
     <div class='row'>
         <div class='col-sm-6 col-sm-offset-3'>
             {% crispy form %}
             <br>
-            <p><a href="{% url 'goods:list' %}?cat_id={{ category.id | urlencode }}{% if page and page > 1 %}&page={{ page | urlencode }}{% endif %}">Go Back</a></p>
+            <p><a href="{% url 'goods:list' %}{% query_builder request %}">Go Back</a></p>
         </div>
     </div>
 {% endblock %}
