--- a/src/templates/_layouts/navbar.html
+++ b/src/templates/_layouts/navbar.html
@@ -25,10 +25,10 @@
             <li {% if request.path == contact %} class="active" {% endif %}><a href="{% url 'contact' %}">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            {% url 'goods:list' as home %}
-            {% if request.user.is_authenticated and category %}
+            {% url 'goods:list' as goods_list %}
+            {% if request.user.is_authenticated and request.path == goods_list %}
                 <li class="active">
-                    <a href="{% url 'goods:create'%}?cat_id={{ category.id | urlencode }}{% if page_obj.number > 1 %}&page={{ page_obj.number | urlencode }}{% endif %}">
+                    <a href="{% url 'goods:create'%}{% query_builder request %}">
                         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;Add Good
                     </a>
                 </li>
