--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -44,6 +44,8 @@
         </div>
         {% endif %}
 
+        {#        jQuery is required by taggit-selectize                    #}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
         {% block content %}
         {% endblock %}
 
@@ -60,7 +62,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://js.stripe.com/v3/"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% block script %}
