--- a/src/templates/_layouts/navbar.html
+++ b/src/templates/_layouts/navbar.html
@@ -23,6 +23,12 @@
             {% endif %}
             <li {% if request.path == about %} class="active" {% endif %}><a href="{% url 'about' %}">About</a></li>
             <li {% if request.path == contact %} class="active" {% endif %}><a href="{% url 'contact' %}">Contact</a></li>
+            <form class="navbar-form navbar-left" role="search" method="get" action="{% url 'goods:list' %}">
+                <div class="form-group">
+                    <input type="text" class="form-control" name="q" value="">
+                </div>
+                <button type="submit" class="btn btn-default">Search</button>
+            </form>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             {% url 'goods:list' as goods_list %}
