--- a/static/static/css/main.css
+++ b/static/static/css/main.css
@@ -41,7 +41,7 @@
 #footer{
     text-align:right;
     border-top:1px #cccccc solid;
-    ppadding-right: 10px;
+    padding-right: 10px;
 }
 #footer p{
     font-size:smaller;
