--- a/src/checkout/templates/checkout/checkout.html
+++ b/src/checkout/templates/checkout/checkout.html
@@ -4,11 +4,11 @@
     <script type="text/javascript">
         // Create a Stripe client
         // TODO: Fix warnings "Unresolved function or method .... Possibly using TypeScript stubs"
-        var stripe = Stripe('{{ publish_key }}');
+        const stripe = Stripe('{{ publish_key }}');
 
         // Custom styling can be passed to options when creating an Element.
         // (Note that this demo uses a wider set of styles than the guide below.)
-        var style = {
+        const style = {
           base: {
             color: '#32325d',
             lineHeight: '24px',
@@ -27,17 +27,17 @@
 
         $(document).ready(function(){
             // Create an instance of Elements
-            var elements = stripe.elements();
+            const elements = stripe.elements();
 
             // Create an instance of the card Element
-            var card = elements.create('card', {style: style, hidePostalCode: true});
+            const card = elements.create('card', {style: style, hidePostalCode: true});
 
             // Add an instance of the card Element into the `card-element` <div>
             card.mount('#card-element');
 
             // Handle real-time validation errors from the card Element.
             card.addEventListener('change', function(event) {
-              var displayError = document.getElementById('card-errors');
+              const displayError = document.getElementById('card-errors');
               if (event.error) {
                 displayError.textContent = event.error.message;
               } else {
@@ -46,14 +46,14 @@
             });
 
             // Handle form submission
-            var form = document.getElementById('payment-form');
+            const form = document.getElementById('payment-form');
             form.addEventListener('submit', function(event) {
               event.preventDefault();
 
               stripe.createToken(card).then(function(result) {
                 if (result.error) {
                   // Inform the user if there was an error
-                  var errorElement = document.getElementById('card-errors');
+                  const errorElement = document.getElementById('card-errors');
                   errorElement.textContent = result.error.message;
                 } else {
                   // Send the token to your server
@@ -64,8 +64,8 @@
 
             function stripeTokenHandler(token) {
               // Insert the token ID into the form so it gets submitted to the server
-              var form = document.getElementById('payment-form');
-              var hiddenInput = document.createElement('input');
+              const form = document.getElementById('payment-form');
+              const hiddenInput = document.createElement('input');
               hiddenInput.setAttribute('type', 'hidden');
               hiddenInput.setAttribute('name', 'stripeToken');
               hiddenInput.setAttribute('value', token.id);
