--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -1,3 +1,4 @@
+{% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,19 +8,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
     <title>{% block title %}{% endblock %} :: tryTen</title>
 
-    {% load staticfiles %}
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
-    <!-- Bootstrap theme -->
-    <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'css/theme.css' %}" rel="stylesheet">
-    <link rel='stylesheet' href='{% static 'css/main.css' %}'/>
+    {#    jQuery neded before Selectize #}
+    {%  render_bundle "main" %}
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -44,10 +37,7 @@
         </div>
         {% endif %}
 
-        {#        jQuery is required by taggit-selectize                    #}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-        {% block content %}
-        {% endblock %}
+        {% block content %}{% endblock %}
 
         <div id="footer">
             <p>Все права принадлежат разработчикам сайта.</p>
@@ -58,13 +48,7 @@
     </div> <!-- /container -->
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://js.stripe.com/v3/"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    {% block script %}
-    {% endblock %}
+    {% block script %}{% endblock %}
   </body>
 </html>
