--- a/src/templates/_layouts/navbar.html
+++ b/src/templates/_layouts/navbar.html
@@ -1,3 +1,4 @@
+{% load crispy_forms_tags %}
 <!-- Fixed navbar -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
@@ -23,12 +24,7 @@
             {% endif %}
             <li {% if request.path == about %} class="active" {% endif %}><a href="{% url 'about' %}">About</a></li>
             <li {% if request.path == contact %} class="active" {% endif %}><a href="{% url 'contact' %}">Contact</a></li>
-            <form class="navbar-form navbar-left" role="search" method="get" action="{% url 'goods:goods:list' %}">
-                <div class="form-group">
-                    <input type="text" class="form-control" name="q" value="">
-                </div>
-                <button type="submit" class="btn btn-default">Search</button>
-            </form>
+            {% if search_form %}{% crispy search_form %}{% endif %}
         </ul>
         <ul class="nav navbar-nav navbar-right">
             {% url 'goods:goods:list' as goods_list %}
