Add meta for Yandex.Webmaster

--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -8,6 +8,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="yandex-verification" content="8cd92d5bc60988bb" />
 
     <title>{% block title %}{% endblock %} :: tryTen</title>
 
