--- a/src/templates/_layouts/navbar.html
+++ b/src/templates/_layouts/navbar.html
@@ -36,7 +36,9 @@
                 </li>
             {% endif %}
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    {% if user.is_authenticated %}Hello, {{ user.username }}{% else %}Account{% endif %} <span class="caret"></span>
+                </a>
                 <ul class="dropdown-menu">
                     {% if request.user.is_authenticated %}
                         <li {% if request.path == profile %} class="active" {% endif %}><a href="{% url 'profile' %}">{{ request.user }}'s Profile</a></li>
