--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -14,6 +14,7 @@
 
     {#    jQuery neded before Selectize #}
     {%  render_bundle "main" %}
+    {%  render_bundle "vendor" %}
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
